examples-enterprise/core-banking-api/ocp/configs/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-banking-api
  labels:
    app: core-banking-api
spec:
  selector:
    app: core-banking-api
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  type: ClusterIP
